<resources>
    <string name="app_name">Thai Recipes</string>
    <string name="title_name_main">สูตรอาหารไทย</string>
    <string name="title_image">รูปปก</string>
    <string name="main_button">อาหาร</string>
    <string name="dess_button">ขนมหวาน</string>
    <string name="title_name_dess">สูตรขนมไทย</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dess_name">สังขยาฟักทอง</string>
    <string name="dess_image">รูปขนม</string>
    <string name="recipe_dess">วิธีทำขนม</string>
    <string name="main_name">ฉู่ฉี่ปลาทู</string>
    <string name="recipe_main">วิธีทำอาหาร</string>
    <string name="about">About</string>
    <string name="main_image">รูปอาหาร</string>
    <string name="title_about_text">Thai Recipes</string>
    <string name="about_image">about image</string>
    <string name="abouttext"> <b>แอพพลิเคชันที่รวบรวมสูตรอาหารไทยง่ายๆ ไม่ว่าจะเป็นอาหารคาวและอาหารหวาน</b>
\n\n<b>อาหารไทย</b> คือ อาหารประจำชาติไทยซึ่งเอกลักษณ์วัฒนธรรมการกินจากอดีตสู่ปัจจุบัน อาหารของไทยนั้นเป็นวัฒนธรรมประจำชาติที่สำคัญของประเทศไทย
\nสูตรอาหารกับข้าวง่ายๆของไทยทั้ง เมนูต้ม เมนูผัด เมนูแกง เมนูทอด เมนูนึ่ง เมนูปิ้งย่าง รวมถึงวัตถุดิบต่างๆครบทุกมิติของการทำอาหาร
\n\n<b>ประโยชน์ของอาหารไทย</b>
\nอาหารไทยเป็นอาหารที่มีสมุนไพรมีประโยชนืต่อร่างกายโดยสมุนไพรในครัวเรือน เช่น ข่า ตะไคร้ ใบมะกรูด กระเทียม หอมแดง พริก นอกจากสมุนไพรในครัวที่กล่าวมาข้างต้นนั้น ยังมีอีกมากมาย
อาหารไทยมีความหลากหลายในชนิดของอาหารในหนึ่งสำรับของอาหารไทยแต่ละมื้อนั้นจะต้องมี เมนูแกง เมนูผัด น้ำพริก ผักสด ทานกับข้าวสวย ครบหมวดหมู่ และยังปิดท้ายด้วย ขนมไทย ที่เป็นอาหารหวานทำให้ร่างกายมีสมดุลของอาหาร
ความปราณีต และ สีสันของอาหารเป็นเอกลักษณ์ของอาหารไทย ผักนิยมแกะสลัก ขนมไทยต้องทำจากน้ำลอยดอกมะลิ ที่มีความหอม ทำจากใบเตย สีสันที่นำมาทำอาหาร ก็ทำจากสีธรรมชาติ สามารถรับประทานได้โดยไม่เป็นภัยต่อสุขภาพ
</string>
    <string name="about_button">About</string>
    <string name="titlemenu_image">titlemenu_image</string>
    <string name="menu_image">TODO</string>
    <string name="share">share</string>
</resources>
