<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameMain_text"
        android:text="@string/title_name_main"
        style="@style/Name_App" />

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:contentDescription="@string/title_image"
        android:cropToPadding="false"
        app:srcCompat="@drawable/ปก" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_button"
            style="@style/MenuButton"
            android:background="#2D82E5"
            android:linksClickable="false"
            android:longClickable="false"
            android:text="@string/main_button" />

        <Button
            android:id="@+id/dess_button"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dess_button" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d9e1e8" />

</LinearLayout>