<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/about_textView"
            style="@style/Name_App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/about_image"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/chef" />

        <TextView
            android:id="@+id/text_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_about_text"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/abouttext" />

    </LinearLayout>
</layout>
