<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/nameMenu_text"
            style="@style/Name_App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dess_name" />

        <ImageView
            android:id="@+id/menu_image"
            android:layout_width="match_parent"
            android:layout_height="276dp"
            android:contentDescription="@string/dess_image"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/eggcustardinpumpkin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFCECACA"
            android:text="@string/recipe_dess" />

    </LinearLayout>
</layout>
