<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/nameMenu_text"
            style="@style/Name_App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_name" />

        <ImageView
            android:id="@+id/menu_image"
            android:layout_width="match_parent"
            android:layout_height="276dp"
            android:contentDescription="@string/main_image"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/chucurry" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/detail_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFCECACA"
                    android:text="@string/recipe_main" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
